subscribe-footer-form-is-done

--- a/index.html
+++ b/index.html
@@ -451,7 +451,31 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-general-block">
+          <p class="subscribe-title">Підпишіться на розсилку</p>
+          <div class="subscribe-footer-form">
+            <form class="subscribe-form-email" name="subscribe-form">
+              <label class="visually-hidden" for="email"><span>email</span></label>
+              <input
+                class="email-footer-form"
+                type="email"
+                id="email"
+                placeholder="E-mail"
+                autofocus
+              />
+            </form>
+            <button class="subscribe-footer-btn" type="submit">
+              <div class="subscribe-btn-pos">
+                <p class="subscribe-btn-text">Підписатися</p>
+                <svg class="send-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </div>
+            </button>
+          </div>
+        </div>
       </div>
+
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button class="modal-close-btn" data-modal-close>
