--- a/index.html
+++ b/index.html
@@ -483,6 +483,29 @@
               <use href="./images/icons.svg#close-black"></use>
             </svg>
           </button>
+          <div class="modal-form">
+            <strong class="modal-text">Залиште свої дані, ми вам передзвонимо</strong>
+            <form class="contact-form" name="contacts-form">
+              <label for="name" class="contact-form-field">
+                <span class="contact-form-label">Ім'я</span>
+                <span class="contact-form-box">
+                  <input
+                    class="contact-form-name"
+                    type="text"
+                    name="name"
+                    id="name"
+                    autofocus
+                    required
+                    minlength="2"
+                    maxlength="28"
+                  />
+                  <svg class="contact-form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#person-black"></use>
+                  </svg>
+                </span>
+              </label>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
