--- a/index.html
+++ b/index.html
@@ -505,6 +505,25 @@
                 </span>
               </label>
             </form>
+            <form class="contact-form" name="contacts-form">
+              <label for="phone_number" class="contact-form-field">
+                <span class="contact-form-label">Телефон</span>
+                <span class="contact-form-box">
+                  <input
+                    class="contact-form-phone"
+                    type="tel"
+                    name="phone_number"
+                    id="phone_number"
+                    required
+                    minlength="9"
+                    maxlength="14"
+                  />
+                  <svg class="contact-form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#phone-black"></use>
+                  </svg>
+                </span>
+              </label>
+            </form>
           </div>
         </div>
       </div>
