--- a/index.html
+++ b/index.html
@@ -483,6 +483,9 @@
               <use href="./images/icons.svg#close-black"></use>
             </svg>
           </button>
+
+          <!-- Форма -->
+
           <div class="modal-form">
             <strong class="modal-text">Залиште свої дані, ми вам передзвонимо</strong>
             <form class="contact-form" name="contacts-form">
@@ -504,8 +507,6 @@
                   </svg>
                 </span>
               </label>
-            </form>
-            <form class="contact-form" name="contacts-form">
               <label for="phone_number" class="contact-form-field">
                 <span class="contact-form-label">Телефон</span>
                 <span class="contact-form-box">
@@ -523,6 +524,54 @@
                   </svg>
                 </span>
               </label>
+              <label for="mail" class="contact-form-field">
+                <span class="contact-form-label">Пошта</span>
+                <span class="contact-form-box">
+                  <input
+                    class="contact-form-email"
+                    type="email"
+                    name="email"
+                    id="mail"
+                    required
+                    minlength="2"
+                    maxlength="35"
+                  />
+                  <svg class="contact-form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#email-black"></use>
+                  </svg>
+                </span>
+              </label>
+              <label for="comments" class="contact-form-field">
+                <span class="contact-form-label">Коментар</span>
+                <textarea
+                  class="contact-form-comments"
+                  name="comments"
+                  id="comments"
+                  rows="20"
+                  placeholder="Введіть текст"
+                ></textarea>
+              </label>
+              <label class="contact-form-accept" for="accept">
+                <input
+                  class="contact-form-checkbox visually-hidden"
+                  type="checkbox"
+                  id="accept"
+                  required
+                />
+                <svg class="contact-form-icon-checkbox" width="16" height="15">
+                  <use
+                    class="contact-form-icon-accept"
+                    href="./images/icons.svg#square-vector"
+                  ></use>
+                  <use
+                    class="contact-form-icon-unaccept"
+                    href="./images/icons.svg#icon-check"
+                  ></use>
+                </svg>
+                <span class="contact-form-accept-text">Погоджуюся з розсилкою та приймаю</span>
+                <a class="contact-form-link" href="#"> Умови договору</a>
+              </label>
+              <button class="contact-form-button" type="submit">Відправити</button>
             </form>
           </div>
         </div>
