--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
           </ul>
         </div>
         <div class="subscribe-general-block">
-          <p class="subscribe-title">Підпишіться на розсилку</p>
+          <strong class="subscribe-title">Підпишіться на розсилку</strong>
           <div class="subscribe-footer-form">
             <form class="subscribe-form-email" name="subscribe-form">
               <label class="visually-hidden" for="email"><span>email</span></label>
@@ -558,7 +558,7 @@
                   id="accept"
                   required
                 />
-                <svg class="contact-form-icon-checkbox" width="16" height="15">
+                <svg class="contact-form-icon-checkbox" width="18" height="18">
                   <use
                     class="contact-form-icon-accept"
                     href="./images/icons.svg#square-vector"
