--- a/portfolio.html
+++ b/portfolio.html
@@ -345,7 +345,7 @@
           </ul>
         </div>
         <div class="subscribe-general-block">
-          <p class="subscribe-title">Підпишіться на розсилку</p>
+          <strong class="subscribe-title">Підпишіться на розсилку</strong>
           <div class="subscribe-footer-form">
             <form class="subscribe-form-email" name="subscribe-form">
               <label class="visually-hidden" for="email"><span>email</span></label>
