--- a/portfolio.html
+++ b/portfolio.html
@@ -344,19 +344,11 @@
             </li>
           </ul>
         </div>
-        <div class="subscribe-general-block">
+         <div class="subscribe-general-block">
           <strong class="subscribe-title">Підпишіться на розсилку</strong>
-          <div class="subscribe-footer-form">
-            <form class="subscribe-form-email" name="subscribe-form">
-              <label class="visually-hidden" for="email"><span>email</span></label>
-              <input
-                class="email-footer-form"
-                type="email"
-                id="email"
-                placeholder="E-mail"
-                autofocus
-              />
-            </form>
+          <form class="subscribe-form-email" name="subscribe-form">
+            <label class="visually-hidden" for="email"><span>email</span></label>
+            <input class="email-footer-form" type="email" id="email" placeholder="E-mail" />
             <button class="subscribe-footer-btn" type="submit">
               <div class="subscribe-btn-pos">
                 <p class="subscribe-btn-text">Підписатися</p>
@@ -365,7 +357,7 @@
                 </svg>
               </div>
             </button>
-          </div>
+          </form>
         </div>
       </div>
     </footer>
